# pointsav-kernel

./: ARCHITECTURE.md  Cargo.toml  INVENTORY.md  build_sdk.sh  build_sdk_production.sh  fetch_kernel.sh  rebuild_sdk_forensic.sh  reset_and_build.sh
crates/pointsav-core/: Cargo.toml
crates/pointsav-core/src/: lib.rs
crates/pointsav-root-task/: Cargo.toml
crates/pointsav-root-task/src/: main.rs
crates/pointsav-sel4-sys/: Cargo.toml  build.rs
crates/pointsav-vmm/: Cargo.toml
crates/pointsav-vmm/src/: lib.rs
src/: lib.rs
