[workspace]
members = [
    "crates/pointsav-core",
    "crates/pointsav-sel4-sys",
    "crates/pointsav-root-task",
    "crates/pointsav-vmm",
]
resolver = "2"

[profile.release]
panic = "abort"    # 2030 Standard: No unwinding in high-assurance systems
lto = true         # Link Time Optimization for the smallest binary
opt-level = "s"    # Optimize for size (Lean)
